# cpp-webview-gui

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
ui/: index.html  package-lock.json  package.json  postbuild.js
ui/src/: main.js  style.css
